# toolbox

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Makefile.rej  README.md  manage.py  pyproject.toml  pyproject.toml.rej
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  cruft-update.yml  publish.yaml  python-app.yml  template-update.yml
contrib/: env-sample
data/: github_stars.json  lists.json  partial_tools.json  partial_tools_notes.json  taggit.json  tags.json  tool_tags.py
docs/: CNAME  index.html
docs/lists/: index.html
docs/lists/ai-software-engineers/: index.html
docs/lists/beancount/: index.html
docs/lists/command-line/: index.html
docs/lists/data-parsers/: index.html
docs/lists/django-admin/: index.html
docs/lists/django-analytics/: index.html
docs/lists/django-auth/: index.html
docs/lists/django-databases/: index.html
docs/lists/django-graphql/: index.html
docs/lists/django-healthcheck/: index.html
docs/lists/django-linters/: index.html
docs/lists/django-liveview/: index.html
docs/lists/django-logging/: index.html
docs/lists/django-models/: index.html
docs/lists/django-multitenancy/: index.html
docs/lists/django-permissions/: index.html
docs/lists/django-profilling/: index.html
docs/lists/django-saving-trees/: index.html
docs/lists/django-servers/: index.html
docs/lists/django-settings/: index.html
docs/lists/django-ui-components/: index.html
docs/lists/django-web-components/: index.html
docs/lists/documentation/: index.html
docs/lists/editors/: index.html
docs/lists/edtech/: index.html
docs/lists/esp32/: index.html
docs/lists/frontend/: index.html
docs/lists/frontend-react/: index.html
docs/lists/frontend-styles/: index.html
docs/lists/frontend-templating/: index.html
docs/lists/full-text-search-in-the-browser/: index.html
docs/lists/github/: index.html
docs/lists/home-assistant/: index.html
docs/lists/home-photo-library/: index.html
docs/lists/home-server/: index.html
docs/lists/interoperability/: index.html
docs/lists/llm/: index.html
docs/lists/llm-agents/: index.html
docs/lists/llm-rag/: index.html
docs/lists/load-testing/: index.html
docs/lists/logging/: index.html
docs/lists/my-projects/: index.html
docs/lists/neovim/: index.html
docs/lists/neovim-distros/: index.html
docs/lists/nostr-clients/: index.html
docs/lists/nostr-relays/: index.html
docs/lists/obsidian/: index.html
docs/lists/postgresql/: index.html
docs/lists/postgresql-vector/: index.html
docs/lists/python-architecture/: index.html
docs/lists/python-background-tasks/: index.html
docs/lists/python-cli/: index.html
docs/lists/python-gui/: index.html
docs/lists/python-json/: index.html
docs/lists/python-linting/: index.html
docs/lists/python-logging/: index.html
docs/lists/python-orms/: index.html
docs/lists/python-profilling/: index.html
docs/lists/python-rpc/: index.html
docs/lists/python-text-parsing/: index.html
docs/lists/python-web-framerworks/: index.html
docs/lists/python-webassembly/: index.html
docs/static/: bootstrap.min.css.br  bootstrap.min.js.br
docs/tags/: index.html
toolbox/: asgi.py  settings.py  settings.py.rej  urls.py  wsgi.py
toolbox/core/: admin.py  apps.py  models.py  views.py
toolbox/users/: apps.py
(+8766 files in other folders)
