[tool.poetry]
name = "toolbox"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
dj-database-url = "2.2.0"
django = "5.1.2"
django-distill = "3.2.7"
django-extensions = "3.2.3"
django-htmx = "1.19.0"
django-taggit = "6.1.0"
fontawesomefree = "^6.6.0"
gunicorn = "23.0.0"
python-decouple = "3.8"
whitenoise = {extras = ["brotli"], version = "6.7.0"}

[tool.poetry.group.data.dependencies]
github-to-sqlite = "2.9"
sqlite-utils = "3.37"

[tool.poetry.group.dev.dependencies]
model-bakery = "1.20.0"
pre-commit = "4.0.1"
pytest = "8.3.3"
pytest-django = "4.9.0"
pytest-mock = "3.14.0"


[tool.djlint]
blank_line_after_tag="endblock,extends"
blank_line_before_tag="block"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "toolbox.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "S", "TRY"]
ignore = ["E501"]
line-length = 88

[tool.ruff.per-file-ignores]
"manage.py" = ["TRY003"]
"**/tests/**" = ["S101"]
