[tool.poetry]
name = "toolbox"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10"
dj-database-url = "3.0.1"
django = "5.2.6"
django-distill = "3.2.7"
django-extensions = "4.1"
django-htmx = "1.23.2"
django-taggit = "6.1.0"
fontawesomefree = "^6.6.0"
gunicorn = "23.0.0"
python-decouple = "3.8"
whitenoise = {extras = ["brotli"], version = "6.9.0"}

[tool.poetry.group.data.dependencies]
github-to-sqlite = "2.9"
sqlite-utils = "3.38"

[tool.poetry.group.dev.dependencies]
model-bakery = "1.20.5"
pre-commit = "4.3.0"
pytest = "8.4.2"
pytest-deadfixtures = "2.2.1"
pytest-django = "4.11.1"
pytest-mock = "3.14.1"
cruft = "^2.16.0"


[tool.djlint]
blank_line_after_tag = "endblock,extends"
blank_line_before_tag = "block"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "toolbox.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "N804", "N805", "S", "TRY"]
ignore = ["E501", "TRY002", "TRY003"]
line-length = 88

[tool.ruff.per-file-ignores]
"manage.py" = ["TRY003"]
"**/tests/**" = ["S101"]
