[project]
name = "toolbox"
version = "0.0.0"
description = ""
authors = []
requires-python = "~=3.13"
dependencies = [
  "dj-database-url==3.0.1",
  "django==5.2.7",
  "django-distill==3.2.7",
  "django-extensions==4.1",
  "django-htmx==1.26.0",
  "django-taggit==6.1.0",
  "fontawesomefree==6.6.0",
  "gunicorn==23.0.0",
  "python-decouple==3.8",
  "whitenoise[brotli]==6.10.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.data.dependencies]
github-to-sqlite = "2.9"
sqlite-utils = "3.39"

[tool.poetry.group.dev.dependencies]
model-bakery = "1.21.0"
pre-commit = "4.5.1"
pytest = "9.0.2"
pytest-deadfixtures = "3.1.0"
pytest-django = "4.11.1"
pytest-mock = "3.15.1"
cruft = "^2.16.0"


[tool.djlint]
blank_line_after_tag = "endblock,extends"
blank_line_before_tag = "block"


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "toolbox.settings"
python_files = "tests.py test_*.py *_tests.py"


[tool.ruff]
select = ["E", "F", "I", "N804", "N805", "S", "TRY"]
ignore = ["E501", "TRY002", "TRY003"]
line-length = 88

[tool.ruff.per-file-ignores]
"manage.py" = ["TRY003"]
"**/tests/**" = ["S101"]
